--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,247 +1,154 @@
-﻿@{
+﻿@model List<JustScan.Models.Menu>
+
+@{
     Layout = "";
-    ViewData["Title"] = "Menu";
+    ViewData["Title"] = "Index";
 }
 
 
-    <head>
-        <link rel="stylesheet" href="~/css/menu.css" />
-    </head>
+<head>
+    <title>JustScan</title>
+    <link rel="stylesheet" href="~/css/menu.css" />
+    <style>
+        p, h1, button {
+            font-family: Tahoma;
+            text-align: left;
+            text-transform: uppercase;
+            font-size: 30px;
+        }
+    </style>
+</head>
 
-    <body onload="myFunction()" style="margin:0; border-style: solid;">
+<body onload="myFunction()" style="margin:0; border-style: solid;">
 
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
-            <a href="#">Contact</a>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
+    </div>
+
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+
+    <script type="text/javascript">
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "100%";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+        }
+    </script>
+
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+    <script type="text/javascript">
+        var myVar;
+
+        function myFunction() {
+
+            document.body.style.backgroundImage = "url('../Image/Scan.jpg')";
+            document.body.style.backgroundSize = "100% 100%";
+
+            myVar = setTimeout(showPage, 1500);
+        }
+
+        function showPage() {
+            document.getElementById("loader").style.display = "none";
+            document.getElementById("myDiv").style.display = "block";
+        }
+
+        function openCategory(j, l) {
+            debugger;
+            var z = l;
+            for (var i = 1; i <= l; i++) {
+                if (i == j) {
+                    document.getElementById("business" + i).style.display = "block";
+                }
+                else {
+                    document.getElementById("business" + i).style.display = "none";
+
+                }
+            }
+
+        }
+
+
+    </script>
+
+
+    <div id="loader"></div>
+    <div style="display:none;" id="myDiv" class="animate-bottom">
+        <div class="display-middle center">
+            <span class="text-white hide-large hide-medium"><b>Welcome @Model.First().BusinessName</b></span>
+        </div>
+        <div class="display-bottomleft padding">
+            <span class="tag xlarge">Open from 10am to 12pm</span>
+        </div>
+        <img src="~/Image/Plate.jpg" style="width:100%" />
+
+
+        <div class="container black padding-64 xxlarge" id="menu">
+            <div class="content">
+
+                <h1 class="center jumbo" style="margin-bottom:64px">MENU</h1>
+
+
+                <div>
+
+                    @{
+                    var j = 1;
+                    var i = 1;
+                    var name = "";
+                    }
+                    
+
+
+
+
+                    @foreach (Menu menu in Model)
+                    {
+                        var cName = "category" + j;
+
+                        <button id="@{@cName}" class="tab1" onclick="openCategory(@j,@Model.Select(x=>x.CategoryName).Distinct().Count())">@menu.CategoryName</button>
+                        j++;
+                    }
+                </div>
+
+                @foreach (Menu menu1 in Model)
+                {
+                    @if (menu1.CategoryName != name)
+                    {
+                        var fName = "business" + i;
+
+                        <div id="@{@fName}" style="display:none;">
+
+
+                            @foreach (Menu menu in Model)
+                            {
+
+                                @if (menu.CategoryName == menu1.CategoryName)
+                                {
+
+                                    <h1><b>@menu.Description</b> <span class="span">@menu.Price L</span></h1>
+                                    <p class="text">@menu.Description</p>
+                                    <hr>
+                                }
+
+                            }
+
+                        </div>
+
+                        i++;
+                        name = menu1.BusinessName;
+
+                    }
+                }
+            </div>
         </div>
 
-        <!-- <h2>Animated Sidenav Example</h2>
-    <p>Click on the element below to open the side navigation menu.</p> -->
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+    </div>
+</body>
 
-        <script type="text/javascript">
-            function openNav() {
-                document.getElementById("mySidenav").style.width = "100%";
-            }
-
-            function closeNav() {
-                document.getElementById("mySidenav").style.width = "0";
-            }
-        </script>
-        <!--  <p align="center"><b>JUST SCAN</b></p>
-          <hr /> -->
-
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
-        <script type="text/javascript">
-            var myVar;
-
-            function myFunction() {
-                myVar = setTimeout(showPage, 1500);
-            }
-
-            function showPage() {
-                document.getElementById("loader").style.display = "none";
-                document.getElementById("myDiv").style.display = "block";
-            }
-
-            function myFunction1() {
-
-                document.getElementById("Pizza").style.display = "block";
-                document.getElementById("Pasta").style.display = "none";
-                document.getElementById("Starter").style.display = "none";
-
-            }
-
-            function myFunction2() {
-
-                document.getElementById("Pasta").style.display = "block";
-                document.getElementById("Starter").style.display = "none";
-                document.getElementById("Pizza").style.display = "none";
-
-            }
-
-            function myFunction3() {
-
-                document.getElementById("Starter").style.display = "block";
-                document.getElementById("Pasta").style.display = "none";
-                document.getElementById("Pizza").style.display = "none";
-
-            }
-
-        </script>
-
-
-        @*<div class="top">
-            <ul class="navbar" id="mynavbar">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#menu">MENU</a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#googlemap">CONTACT</a></li>
-            </ul>
-        </div>*@
-        <div id="loader"></div>
-        <div style="display:none;" id="myDiv" class="animate-bottom">
-
-            <header class="bgimg display-container grayscale-min" id="home">
-                <div class="display-bottomleft padding">
-                    <span class="tag xlarge">Open from 10am to 12pm</span>
-                </div>
-                <div class="display-middle center">
-                    <span class="text-white hide-large hide-medium"><b>CRUST PIZZA</b></span>
-                    <div class="slideshow-container">
-
-                        <!-- Full-width images with number and caption text -->
-                        <div class="mySlides fade">
-                            <div class="numbertext">1 / 3</div>
-                            <img src="http://ashly.com/wp-content/uploads/2015/08/wallpaper.jpg" style="width:100%">
-                            <div class="text">Caption Text</div>
-                        </div>
-
-                        <div class="mySlides fade">
-                            <div class="numbertext">2 / 3</div>
-                            <img src="https://static.tumblr.com/f42df5d8cf48d1485d8a112c85e99c51/qe1doun/uC8mzzqhr/tumblr_static_dwp-tfib.jpg" style="width:100%">
-                            <div class="text">Caption Two</div>
-                        </div>
-
-                        <div class="mySlides fade">
-                            <div class="numbertext">3 / 3</div>
-                            <img src="http://www.canvaspress.com/images/products/wallpaper/wall-murals-wallpaper-1200x300.jpg" style="width:100%">
-                            <div class="text">Caption Three</div>
-                        </div>
-
-                        <!-- Next and previous buttons -->
-                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                    </div>
-                    <br>
-
-                    <!-- The dots/circles -->
-                    <div style="text-align:center">
-                        <span class="dot" onclick="currentSlide(1)"></span>
-                        <span class="dot" onclick="currentSlide(2)"></span>
-                        <span class="dot" onclick="currentSlide(3)"></span>
-                    </div>
-                    <script>
-                        var slideIndex = 1;
-                        showSlides(slideIndex);
-                        // Next/previous controls
-                        function plusSlides(n) {
-                            showSlides(slideIndex += n);
-                        }
-                        // Thumbnail image controls
-                        function currentSlide(n) {
-                            showSlides(slideIndex = n);
-                        }
-
-                        function showSlides(n) {
-                            var i;
-                            var slides = document.getElementsByClassName("mySlides");
-                            var dots = document.getElementsByClassName("dot");
-                            if (n > slides.length) { slideIndex = 1 }
-                            if (n < 1) { slideIndex = slides.length }
-                            for (i = 0; i < slides.length; i++) {
-                                slides[i].style.display = "none";
-                            }
-                            for (i = 0; i < dots.length; i++) {
-                                dots[i].className = dots[i].className.replace(" active", "");
-                            }
-                            slides[slideIndex - 1].style.display = "block";
-                            dots[slideIndex - 1].className += " active";
-                        }
-                    </script>
-                    <div>-------</div>
-                    <p style="color:#000000	; border: 1px; font-size:12px;padding:50px;"><i>GONDOLIER ITALIAN RESTAURANT AND PIZZA IS A FAMILY OWNED AND OPERATED RESTAURANT. IKE TZORTZIS AND ELENI TZORTZIS ESTABLISHED GONDOLIER IN 1995. WE STRIVE TO PROVIDE A MENU OF HIGH QUALITY CUISINE IN AN ATMOSPHERE OF WARMTH AND FRIENDSHIP.  WE HOPE THAT YOU WILL JOIN US FOR LUNCH OR DINNER SOON!</i></p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2830.257443010448!2d20.460272015972482!3d44.81631967909859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a7ab3bd6ab05f%3A0x5bbff528e40d2fcc!2sPizzeria+Caribic!5e0!3m2!1ssr!2srs!4v1479895379177" width="780" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    <p style="margin-top: 167px;"><a href="#menu" class="btn xxlarge padding" style="margin-right:450px;">MENU</a></p>
-                    <p style="margin-left:40px;"><a href="#contact" class="btn xxlarge padding" style="margin-left:500px; margin-top:-95px;">REZERVO</a></p>
-                </div>
-            </header>
-            <div id="contact">
-                <div class="contact1">
-                    <h1 class="contact2">REZERVO</h1>
-                    <p>Find us at some address at some place or call us at 05050515-122330</p>
-
-
-
-                    <form action="form.asp" target="_blank">
-                        <p><input class="form1" type="text" placeholder="Name" required="" name="Name"></p>
-                        <p><input class="form1" type="number" placeholder="How many people" required="" name="People"></p>
-                        <p><input class="form1" type="datetime-local" placeholder="Date and time" required="" name="date" value="2017-11-16T20:00"></p>
-                        <p><textarea class="form1" type="text" placeholder="Message \ Special requirements" required="" name="Message"> </textarea></p>
-                        <p><button class="button" type="submit">REZERVO</button></p>
-                    </form>
-                </div>
-            </div>
-            <div class="container black padding-64 xxlarge" id="menu">
-                <div class="content">
-
-                    <h1 class="center jumbo" style="margin-bottom:64px">MENU</h1>
-                    <div>
-                        <button class="tab1" onclick="myFunction1()">PIZZA</button>
-                        <button class="tab2" onclick="myFunction2()">SALADAS</button>
-                        <button class="tab3" onclick="myFunction3()">STARTER</button>
-                    </div>
-                    <div id="Pizza" class="pizza1" style="display:none;">
-                        <h1><b>Margherita</b> <span class="span">$12.50</span></h1>
-                        <p class="text">Fresh tomatoes, fresh mozzarella, fresh basil</p>
-                        <hr>
-
-                        <h1><b>Formaggio</b> <span class="span">$15.50</span></h1>
-                        <p class="text">Four cheeses (mozzarella, parmesan, pecorino, jarlsberg)</p>
-                        <hr>
-
-                        <h1><b>Chicken</b> <span class="span">$17.00</span></h1>
-                        <p class="text">Fresh tomatoes, mozzarella, chicken, onions</p>
-                        <hr>
-
-                        <h1><b>Pineapple'o'clock</b> <span class="span">$16.50</span></h1>
-                        <p class="text">Fresh tomatoes, mozzarella, fresh pineapple, bacon, fresh basil</p>
-                        <hr>
-
-                        <h1><b>Meat Town</b> <span class="span1">Hot!</span><span class="span">$20.00</span></h1>
-                        <p class="text">Fresh tomatoes, mozzarella, hot pepporoni, hot sausage, beef, chicken</p>
-                        <hr>
-
-                        <h1><b>Parma</b> <span class="span1">New</span><span class="span">$21.50</span></h1>
-                        <p class="text">Fresh tomatoes, mozzarella, parma, bacon, fresh arugula</p>
-                    </div>
-
-                    <div id="Pasta" class="pasta1">
-                        <h1><b>Lasagna</b> <span class="span1">Popular</span> <span class="span">$13.50</span></h1>
-                        <p class="text">Special sauce, mozzarella, parmesan, ground beef</p>
-                        <hr>
-
-                        <h1><b>Ravioli</b> <span class="span">$14.50</span></h1>
-                        <p class="text">Ravioli filled with cheese</p>
-                        <hr>
-
-                        <h1><b>Spaghetti Classica</b> <span class="span">$11.00</span></h1>
-                        <p class="text">Fresh tomatoes, onions, ground beef</p>
-                        <hr>
-
-                        <h1><b>Seafood pasta</b> <span class="span">$25.50</span></h1>
-                        <p class="text">Salmon, shrimp, lobster, garlic</p>
-                    </div>
-                    <div id="Starter" class="starter1">
-                        <h1><b>Today's Soup</b> <span class="span1">Seasonal</span><span class="span">$5.50</span></h1>
-                        <p class="text">Ask the waiter</p>
-                        <hr>
-
-                        <h1><b>Bruschetta</b> <span class="span">$8.50</span></h1>
-                        <p class="text">Bread with pesto, tomatoes, onion, garlic</p>
-                        <hr>
-
-                        <h1><b>Garlic bread</b> <span class="span">$9.50</span></h1>
-                        <p class="text">Grilled ciabatta, garlic butter, onions</p>
-                        <hr>
-
-                        <h1><b>Tomozzarella</b> <span class="span">$10.50</span></h1>
-                        <p class="text">Tomatoes and mozzarella</p>
-                    </div>
-
-                </div>
-    </body>
