--- a/Views/Demo/Index.cshtml
+++ b/Views/Demo/Index.cshtml
@@ -101,7 +101,7 @@
         <div class="container black padding-64 xxlarge" id="menu">
             <div class="content">
 
-                <h1 class="center jumbo" style="margin-bottom:64px">MENU</h1>
+                <h1 class="center jumbo" style="margin-bottom:64px">OUR MENU</h1>
                 
                 
                 <div>
