--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,6 +16,7 @@
             text-transform: uppercase;
             font-size: 30px;
         }
+ 
     </style>
 </head>
 
@@ -92,7 +93,7 @@
         <div class="container black padding-64 xxlarge" id="menu">
             <div class="content">
 
-                <h1 class="center jumbo" style="margin-bottom:64px">MENU</h1>
+                <h1 class="center jumbo" style="margin-bottom:64px"><b>OUR</b> MENU</h1>
 
 
                 <div>
