--- a/wwwroot/css/menu.css
+++ b/wwwroot/css/menu.css
@@ -96,6 +96,13 @@
     }
 }
 
+h1 {
+    color: red;
+    font-size: large;
+}
+
+
+
 .sidenav {
     height: 100%;
     width: 0;
@@ -283,9 +290,9 @@
 }
 
 .text-white {
-    font-size: 80px;
+    font-size: 100px;
     line-height: 1.5;
-    color: #000000 !important;
+    color: red !important;
     font-family: 'Times New Roman', Times, serif, cursive;
 }
 
@@ -344,8 +351,10 @@ strong, b {
     font-size: 64px !important;
     font-weight: 400;
     margin: 10px 0;
-    font-family: 'Amatic SC', cursive;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
+
 
 
 .pizza1 {
@@ -360,14 +369,14 @@ strong, b {
     display: block;
 }
 
-.tab1, .tab2, .tab3 {
+.tab1 {
     padding: 20px 112px;
-    font-size: 36px;
+    font-size: 47px;
     /*  background-color: black;
     color: white;*/
     font-family: 'Amatic SC', cursive;
-    background-color: white;
-    color: black;
+    background-color: #f44336;
+    color: white;
     border-radius: 8px;
     border:1px solid black;
     font-weight:bold;
@@ -385,7 +394,7 @@ strong, b {
 
     .tab3:hover {
         background-color: #f44336;
-        color: white;
+        color: #f44336;
     }
 
 h1 {
