--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    Layout = "";
+    ViewData["Title"] = "JustScan";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Contact Me</p>
+
+<img src="~/Image/Scan.jpg" style="width:100%" />
+
