--- a/wwwroot/css/menu.css
+++ b/wwwroot/css/menu.css
@@ -38,7 +38,7 @@
 /* Caption text */
 .text {
     color: #f2f2f2;
-    font-size: 15px;
+    font-size: 0px;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
@@ -370,14 +370,17 @@ strong, b {
 }
 
 .tab1 {
-    padding: 22px 40px;
-    font-size: 39px;
+    padding: 20px 30px;
+    font-size: 35px;
     font-family: Arial, Helvetica, sans-serif, cursive;
     background-color: #ffffff;
     color: #000000;
     border-radius: 8px;
-    border: 1px solid black;
+    border: 3px solid black;
     font-weight: bold;
+    width:30%;
+    margin-left:5px;
+    margin-top:10px;
 }
 
     .tab1:hover {
