--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     <title>JustScan</title>
     <link rel="stylesheet" href="~/css/menu.css" />
     <link href="https://fonts.googleapis.com/css?family=Schoolbell&v1" rel="stylesheet">
+    <link rel="icon" href="~/Image/Scan.jpg" type="image/x-icon">
 
     <style>
         p, h1, button {
