--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -42,7 +42,7 @@
 
         <nav>
             <div class="logo">
-                <img src="~/Home/img/name-logo.png" width="50%" alt="" />
+                <img src="~/Home/img/name-logo.png" width="300" alt="" />
             </div>
             <div class="mini-logo">
                 <img src="~/Home/img/mini_logo.png" alt="">
@@ -79,12 +79,12 @@
                     <div class="container-fluid">
                         <div class="col-md-6">
                             <div class="left-content">
-                                <h2>About Us</h2>
-                                <p>Please tell your friends about templatemo website. A variety of free CSS templates are available for immediate downloads.</p>
-                                <p>Phasellus vitae faucibus orci. Etiam eleifend orci sed faucibus semper. Cras varius dolor et augue fringilla, eu commodo sapien iaculis. Donec eget dictum tellus. <a href="#">Curabitur</a> a interdum diam. Nulla vestibulum porttitor porta.</p>
-                                <p>Nulla vitae interdum libero, vel posuere ipsum. Phasellus interdum est et dapibus tempus. Vestibulum malesuada lorem condimentum mauris ornare dapibus. Curabitur tempor ligula et <a href="#">placerat</a> molestie.</p>
-                                <p>Aliquam efficitur eu purus in interdum. <a href="#">Etiam tincidunt</a> magna ex, sit amet lobortis felis bibendum id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                <div class="main-btn"><a href="#3">Read More</a></div>
+                                <h2>Rreth Nesh</h2>
+                                <p>Per me shume se kater dekata, barkodet kane ndihmuar kompanite te medha dhe te vogla ne menyre efikase dhe saktesi te identifikoje menute qe klientet te deshirojne pa nevojen e nje ndihmesi.</p>
+                                <p>Barkodet mund te lexohen nga telefoni juaj fare lehte, thjeshte duke drejtuar kameren e telefonit dhe menjehere do ju shfaqet menuja e restorantit.</p>
+                                <p>Ne ftojme te gjithe klientet qe te behen pjese e kesaj nisme per sigurin dhe korrektesine tuaj qe ju deshironi.</p>
+                                <p>Keshtu ne ju kursejme juve kohen tuaj. Jeni te mirpritur.</p>
+                                <div class="main-btn"><a href="#3">Më Shumë</a></div>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -364,7 +364,7 @@
                                     3. Click "Share" and choose "Embed map" tab
                                     4. Copy only URL and paste it within the src="" field below
                             -->
-                                <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=adi%20profesional+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=adi%20profesional+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -405,7 +405,7 @@
 
         <div class="footer">
             <div class="content">
-                <p>Copyright &copy; 2020 Company Name . Template: <a rel="nofollow" href="https://templatemo.com/tm-512-moonlight">Moonlight</a></p>
+                <p>Copyright &copy; 2020 Just Scan.<br /> Powered by <a rel="nofollow" href="mailto:freelenerit@gmail.com">Freelencerit</a></p>
             </div>
         </div>
 
