--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -150,12 +150,22 @@
 
                 @{
                     string path1 = "";
+                    string curreny = "";
                 }
 
 
                 @foreach (Menu menu1 in Model)
                 {
                     path1 = menu1.ImageID + ".jpg";
+
+                    @if (menu1.BusinessID == 1)
+                    {
+                        curreny = "€";
+                    }
+
+                    else {
+ curreny = "L";
+                    }
 
                     @if (menu1.CategoryName != name)
                     {
@@ -167,7 +177,7 @@
                             <div id="@{@fName}" style="display:block;">
 
                                 <br /> <br />
-                                <img src="~/Image/Category_Image/@path1" width="935" height="300" alt="Foto" />
+                                <img src="~/Image/Category_Image/@path1" clas height="300" alt="Foto" />
 
 
                                 @foreach (Menu menu in Model)
@@ -183,7 +193,7 @@
                                             </h3>
                                         }
 
-                                        <h1 style="font-size:xx-large;">@menu.Description <span class="span">@menu.Price €</span></h1>
+                                        <h1 style="font-size:xx-large;">@menu.Description <span class="span">@menu.Price @curreny</span></h1>
                                         <p class="text" style="font-family:'Bell MT';text-transform: lowercase;">@menu.MetaDescription</p>
                                         <hr>
                                     }
@@ -212,7 +222,7 @@
                                             @menu.SubCategoryName
                                         </h3>
                                     }
-                                    <h1 style="font-size: xx-large;">@menu.Description <span class="span">@menu.Price €</span></h1>
+                                    <h1 style="font-size: xx-large;">@menu.Description <span class="span">@menu.Price @curreny</span></h1>
                                     <p class="text" style="font-family:'Bell MT';text-transform: lowercase;">@menu.MetaDescription</p>
                                     <hr>
                                 }
