--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -167,7 +167,7 @@
                             <div id="@{@fName}" style="display:block;">
 
                                 <br /> <br />
-                                <img src="~/Image/Category_Image/@path1" width="935" height="300" alt="Foto" />
+                                <img src="~/Image/Category_Image/@path1" class="responsive"  alt="Foto" />
 
 
                                 @foreach (Menu menu in Model)
@@ -197,7 +197,8 @@
                         <div id="@{@fName}" style="display:none;">
 
                             <br /><br />
-                            <img src="~/Image/Category_Image/@path1" width="935" height="300" alt="Foto" />
+                           <img src="~/Image/Category_Image/@path1" class="responsive" alt="Foto"/>
+
 
                             @foreach (Menu menu in Model)
                             {
