Clear Cache Images

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -177,7 +177,7 @@
                             <div id="@{@fName}" style="display:block;">
 
                                 <br /> <br />
-                                <img src="~/Image/Category_Image/@path1" class="responsive"  alt="Foto" />
+                                <img src="~/Image/Category_Image/@path1?uploadTime=1" class="responsive"  alt="Foto" />
 
 
                                 @foreach (Menu menu in Model)
@@ -207,7 +207,7 @@
                         <div id="@{@fName}" style="display:none;">
 
                             <br /><br />
-                           <img src="~/Image/Category_Image/@path1" class="responsive" alt="Foto"/>
+                           <img src="~/Image/Category_Image/@path1?uploadTime=1" class="responsive" alt="Foto"/>
 
 
                             @foreach (Menu menu in Model)
