--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -108,18 +108,21 @@
             string path = @Model.First().BusinessID + ".jpg";
         }
 
-
+    <div>
         <img src="~/Image/@path" class="responsive" width="600" height="400" alt="@Model.First().BusinessName" />
+    </div>
+    <div style="margin-top: 200px; text-align:center;">
 
         <a id="menubutton" href="#menu" class="tab1" style="font-size:88px;border:3px solid;width:323px;height:150px;border-radius:10%;color:black;background-color:white;" onclick="openMenu()">MENU</a>
-
     </div>
 
+        </div>
 
 
-    <div class="container black padding-64 xxlarge" id="menu" style="display:none; height:105%;">
-        <div class="content;">
-            <a onclick="hideMenu();" class="close" > </a>
+
+        <div class="container black padding-64 xxlarge" id="menu" style="display:none; height:105%;">
+            <div class="content;">
+                <a onclick="hideMenu();" class="close"> </a>
                 <div style="padding-left: 26px;">
 
                     @{
@@ -163,8 +166,9 @@
                         curreny = "€";
                     }
 
-                    else {
- curreny = "L";
+                    else
+                    {
+                        curreny = "L";
                     }
 
                     @if (menu1.CategoryName != name)
@@ -177,7 +181,7 @@
                             <div id="@{@fName}" style="display:block;">
 
                                 <br /> <br />
-                                <img src="~/Image/Category_Image/@path1?uploadTime=1" class="responsive"  alt="Foto" />
+                                <img src="~/Image/Category_Image/@path1?uploadTime=1" class="responsive" alt="Foto" />
 
 
                                 @foreach (Menu menu in Model)
@@ -207,7 +211,7 @@
                         <div id="@{@fName}" style="display:none;">
 
                             <br /><br />
-                           <img src="~/Image/Category_Image/@path1?uploadTime=1" class="responsive" alt="Foto"/>
+                            <img src="~/Image/Category_Image/@path1?uploadTime=1" class="responsive" alt="Foto" />
 
 
                             @foreach (Menu menu in Model)
@@ -239,8 +243,8 @@
 
                     }
                 }
+            </div>
         </div>
-    </div>
 
 </body>
 </html>
