--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -50,8 +50,8 @@
             <ul>
                 <li><a href="#1"><i class="fa fa-home"></i> <em>Home</em></a></li>
                 <li><a href="#2"><i class="fa fa-user"></i> <em>About</em></a></li>
-                <li><a href="#3"><i class="fa fa-pencil"></i> <em>Dobitë</em></a></li>
-                <li><a href="#4"><i class="fa fa-image"></i> <em>Klientët</em></a></li>
+                <li><a href="#1"><i class="fa fa-pencil"></i> <em>Dobitë</em></a></li>
+                <li><a href="#1"><i class="fa fa-image"></i> <em>Klientët</em></a></li>
                 <li><a href="#5"><i class="fa fa-envelope"></i> <em>Kontakt</em></a></li>
             </ul>
         </nav>
@@ -119,6 +119,25 @@
                                     </div>
                                 </div>
                                 <div class="second-section">
+                                    <div class="container-fluid">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="left-image">
+                                                    <img src="~/Home/img/second_service.jpg" alt="second service">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="right-content">
+                                                    <h2>Maecenas eu purus eu sapien</h2>
+                                                    <p>Sed vitae felis in lorem mollis mollis eget in leo. Donec commodo, ex nec rutrum venenatis, nisi nisl malesuada magna, sed semper ipsum enim a ipsum. Aenean in ante vel mi molestie bibendum. Quisque sit amet lacus in diam pretium faucibus. Cras vel justo lorem.</p>
+                                                    <div class="main-btn"><a href="#4">Continue Reading</a></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                                            <div class="third-section">
                                     <div class="container-fluid">
                                         <div class="row">
                                             <div class="col-md-6">
